<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.staff.StaffForgotPasswordActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgotPasswordScreen"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:background="#ffffff"
            android:minHeight="44dp"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="24dp"
                    android:layout_height="32dp"
                    android:layout_margin="16dp"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="returnToPreviousPage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/outline_arrow_back_ios_black_24dp"
                    tools:layout_editor_absoluteY="51dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_margin="16dp"
                    android:text="@string/textview_forgot_password"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textViewPasswordAssist"
            android:layout_width="318dp"
            android:layout_height="40dp"
            android:layout_marginTop="316dp"
            android:text="@string/textView_passwordAssist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_contactAdmin"
            android:layout_width="343dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="#40bfff"
            android:onClick="launchPhoneApp"
            android:text="@string/button_contact_now"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPasswordAssist"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>